Refactored the code to cache placeholders and then use them in sync